<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_16">

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_72"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_32"
            android:src="@mipmap/ic_launcher" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumb"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="@dimen/dp_6"
            android:textCursorDrawable="@drawable/edittext_cursor_accent"
            app:met_baseColor="@color/primaryTextColor"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText=""
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumber"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_6"
            android:textCursorDrawable="@drawable/edittext_cursor_accent"
            app:met_baseColor="@color/primaryTextColor"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText=""
            app:met_maxCharacters="20"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            materialdesign:rippleSpeed="100" />

    </RelativeLayout>
</LinearLayout>